--- a/index.html
+++ b/index.html
@@ -14,21 +14,27 @@
       <h1>Lucas de Souza Lima</h1>  
       <h2>18 anos</h2>
       <hr>
-      <a href="https://pt-br.facebook.com/"><img src="Imagens/Desl.png" alt="" class="foto"></a>
-      </div>
+      <a href="https://pt-br.facebook.com/"><img src="Imagens/Desl.png" alt="" class = "img"></a>
+    </div>
     <div class ="c2">
-    <h3>FORMAÇÃO</h3>
-      <ul>
-        <li> Ensino Médio - 2018 a 2020 - <a href="https://pt-br.facebook.com/Americano.Guarapari/"> Americano </a> </li>  
-      </ul>
-    <h3>IDIOMAS</h3>
-      <ul>
-        <li> Inglês Avançado - 2015 a 2021 - <a href="https://www.cna.com.br/"> CNA </a> </li>
-      </ul>
-    <h3>INTERESSES</h3>
-      <ul>
-        <li> UX Designer </li>
-     </ul>
+     <h3>FORMAÇÃO</h3>
+       <ul>
+         <li> Ensino Médio - 2018 a 2020 - <a class = "one" href="https://pt-br.facebook.com/Americano.Guarapari/"> Americano </a>    </li>  
+       </ul>
+     <h3>IDIOMAS</h3>
+       <ul>
+         <li> Inglês Avançado - 2015 a 2021 - <a href="https://www.cna.com.br/"> CNA </a> </li>
+       </ul>
+     <h3>INTERESSES</h3>
+       <ul>
+         <li> UX Designer </li>
+       </ul>
+    </div>
+    <div class = "header">
+    <hr>
+    <h3>Contato</h3>
+    <h3>Email: Desl.lfm@outlook.com</h3>
+    <h3>N° de Celular: 27998890735</h3>
     </div>
   </div>
   
